test-models/src/main/pegasus/com/datahub/test/invalid/MissingAspectAnnotation.pdl
namespace com.datahub.test.invalid

record MissingAspectAnnotation {
  textField: optional string
}